--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -5,15 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar-jpms-deps</artifactId>
-    <version>1.0.11</version>
+    <version>1.0.12</version>
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
     <properties>
-        <auto-service.version>1.0-rc7</auto-service.version>
+        <auto-service.version>1.0.1</auto-service.version>
         <activej.version>4.3</activej.version>
         <build-helper-maven-plugin.version>3.2.0</build-helper-maven-plugin.version>
-        <caffeine.version>3.0.5</caffeine.version>
-        <eclipse-collections-api.version>11.0.0</eclipse-collections-api.version>
+        <caffeine.version>3.1.1</caffeine.version>
+        <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
         <h2-mvstore.version>1.4.200</h2-mvstore.version>
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <jheaps.version>0.14</jheaps.version>
@@ -27,8 +27,8 @@
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
         <org.reactivestreams.version>1.0.3</org.reactivestreams.version>
-        <record-builder-core.version>33</record-builder-core.version>
-        <roaringbitmap.version>0.9.10</roaringbitmap.version>
+        <record-builder-core.version>34</record-builder-core.version>
+        <roaringbitmap.version>0.9.31</roaringbitmap.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencyManagement>
