--- a/jpms-deps/snorocket/pom.xml
+++ b/jpms-deps/snorocket/pom.xml
@@ -32,6 +32,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>${project.build.directory}/moditect</outputDirectory>
+                            <overwriteExistingFiles>true</overwriteExistingFiles>
                             <modules>
                                 <module>
                                     <artifact>
