--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -32,7 +32,7 @@
         <slf4j.version>2.0.0-alpha6</slf4j.version>
         <testng.version>7.4.0</testng.version>
         <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
-        <tinkar.protobuf.version>1.5.0-SNAPSHOT</tinkar.protobuf.version>
+        <tinkar.protobuf.version>1.5.0</tinkar.protobuf.version>
     </properties>
     <dependencyManagement>
         <dependencies>
