--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -3,11 +3,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.hl7.tinkar</groupId>
+        <artifactId>tinkar-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <packaging>pom</packaging>
-    <name>TINKAR: (MMP)</name>
+    <name>TINKAR</name>
+
     <organization>
         <name>HL7</name>
         <url>https://www.hl7.org</url>
