--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -8,6 +8,13 @@
     <version>1.0.15</version>
     <packaging>pom</packaging>
     <name>TINKAR JPMS Deps: (MMP)</name>
+    
+    <parent>
+        <groupId>org.hl7.tinkar</groupId>
+        <artifactId>tinkar-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <properties>
         <auto-service.version>1.0.1</auto-service.version>
         <activej.version>4.3</activej.version>
