--- a/jpms-deps/auto-service/pom.xml
+++ b/jpms-deps/auto-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>tinkar-jpms-deps</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.15</version>
+        <version>1.0.15-SNAPSHOT</version>
     </parent>
     <artifactId>auto-service</artifactId>
     <packaging>jar</packaging>
