--- a/jpms-deps/pom.xml
+++ b/jpms-deps/pom.xml
@@ -3,11 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.hl7.tinkar</groupId>
+    
     <artifactId>tinkar-jpms-deps</artifactId>
-    <version>1.0.15</version>
     <packaging>pom</packaging>
-    <name>TINKAR JPMS Deps: (MMP)</name>
+    <name>TINKAR JPMS Deps</name>
     
     <parent>
         <groupId>org.hl7.tinkar</groupId>
