--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -4,8 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <version>1.0</version>
-
+    
     <parent>
         <groupId>org.hl7.tinkar</groupId>
         <artifactId>tinkar</artifactId>
@@ -62,7 +61,7 @@
         </dependency>        
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
-            <artifactId>protobuf</artifactId>
+            <artifactId>tinkar-proto-parent</artifactId>
             <version>${tinkar.protobuf.version}</version>
         </dependency>
         <dependency>
