--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -63,6 +63,8 @@
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>tinkar-proto-parent</artifactId>
             <version>${tinkar.protobuf.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
