--- a/tinkar-core/entity/pom.xml
+++ b/tinkar-core/entity/pom.xml
@@ -13,8 +13,8 @@
 
     <artifactId>entity</artifactId>
     <packaging>jar</packaging>
-    <name>TINKAR: Entity</name>
-    
+    <name>TINKAR Entity</name>
+ 
     <dependencies>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
@@ -62,11 +62,13 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>protobuf</artifactId>
-            <version>${tinkar.protobuf.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
+            <version>1.5.0-SNAPSHOT</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.hl7.tinkar</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>1.5.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.jgrapht</groupId>
             <artifactId>jgrapht-core</artifactId>
