--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -48,7 +48,7 @@
         <roaringbitmap.version>0.9.8</roaringbitmap.version>
         <slf4j.version>2.0.0-alpha6</slf4j.version>
         <testng.version>7.4.0</testng.version>
-        <tinkar-jpms-deps.version>1.0.15</tinkar-jpms-deps.version>
+        <tinkar-jpms-deps.version>1.0-SNAPSHOT</tinkar-jpms-deps.version>
         <tinkar.protobuf.version>1.5.0-SNAPSHOT</tinkar.protobuf.version>
     </properties>
 
