--- a/tinkar-core/collection/pom.xml
+++ b/tinkar-core/collection/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.hl7.tinkar</groupId>
         <artifactId>tinkar</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>collection</artifactId>
