--- a/tinkar-core/component/pom.xml
+++ b/tinkar-core/component/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>tinkar</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>component</artifactId>
