--- a/tinkar-core/provider/data-mvstore-provider/pom.xml
+++ b/tinkar-core/provider/data-mvstore-provider/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>data-mvstore-provider</artifactId>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>mvstore</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${h2-mvstore.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
