--- a/tinkar-core/provider/data-spinedarray-provider/pom.xml
+++ b/tinkar-core/provider/data-spinedarray-provider/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>data-spinedarray-provider</artifactId>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${auto-service.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
