--- a/tinkar-core/provider/search-provider/pom.xml
+++ b/tinkar-core/provider/search-provider/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <artifactId>search-provider</artifactId>
@@ -22,13 +22,13 @@
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>lucene</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${lucene.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.hl7.tinkar</groupId>
             <artifactId>auto-service</artifactId>
-            <version>${tinkar-jpms-deps.version}</version>
+            <version>${auto-service.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
