--- a/tinkar-core/terms/pom.xml
+++ b/tinkar-core/terms/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>tinkar</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <artifactId>terms</artifactId>
     <packaging>jar</packaging>
