--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
-        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-        <project-version>1.0-SNAPSHOT</project-version>
+        <project-version>1.0.0</project-version>
     </properties>
 
     <build>
@@ -30,7 +29,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin.version}</version>
                     <configuration>
                         <source>${maven.compiler.source}</source>
                         <target>${maven.compiler.target}</target>
