--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -38,6 +38,7 @@
         <io.smallrye.reactive.version>1.3.1</io.smallrye.reactive.version>
         <jheaps.version>0.14</jheaps.version>
         <lucene.version>8.9.0</lucene.version>
+        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>3.3.0</maven-assembly-plugin.version>
         <maven-dependency-plugin.version>3.1.2</maven-dependency-plugin.version>
         <maven-source-plugin.version>3.2.0</maven-source-plugin.version>
