--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     
     <artifactId>tinkar</artifactId>
+    <version>1.0.0</version>
 
     <parent>
         <groupId>org.hl7.tinkar</groupId>
